style.css
/* Reset and Default Styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: all 0.3s;
  font-family: "Open Sans", sans-serif;
  text-decoration: none;
}
:root {
  --text-color: #474747;
  --accent-color: #fd6e0a;
  --bg-color: #fff8f3;
  --light-color: #ffffff;
  --dark-color: #181818;
}
.container {
  width: 1140px;
  margin: 0 auto;
}
.btn {
  background-color: var(--accent-color);
  padding: 12px 25px;
  border-radius: 4px;
  font-size: 16px;
  border: solid 1px var(--accent-color);
  color: #ffffff;
  font-weight: 600;
}
.btn:hover {
  background-color: #ff9448;
  border-color: #ff9448;
  color: var(--light-color);
}
.section-title {
  font-size: 32px;
  text-align: center;
  color: var(--dark-color);
  font-weight: 700;
}
.text {
  font-size: 16px;
  line-height: 24px;
  color: var(--text-color);
  font-weight: 400;
}

/* Styles for Header Section */
header {
  z-index: 2;
  position: relative;
}
header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 0;
}
.logo img {
  width: 100px;
}
nav ul {
  display: flex;
  justify-content: end;
  align-items: center;
  list-style: none;
  gap: 40px;
}
nav ul li a {
  text-decoration: none;
  color: var(--text-color);
  font-weight: 400;
  font-size: 16px;
}
nav ul li a:hover {
  color: var(--accent-color);
}

/* Styles for Hero Section */
#hero-section {
  background-color: var(--bg-color);
  padding: 200px 0 0 0;
  background-image: url("./assets/images/half-circle-shap.png");
  background-position: right bottom;
  background-size: 1000px;
  margin-top: -90px;
  z-index: 1;
  background-repeat: no-repeat;
  position: relative;
}
#hero-section .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
#hero-section h1 {
  font-size: 64px;
  font-weight: 700;
  line-height: 72px;
  color: var(--dark-color);
}
#hero-section h1 span {
  font-size: 40px;
  font-weight: 500;
  display: block;
  line-height: 48px;
}
#hero-section p {
  margin: 20px 0;
  text-align: left;
}
#hero-section .hero-buttons {
  display: flex;
  justify-content: start;
  gap: 25px;
  align-items: center;
}
#hero-section .btn.btn-2 {
  background-color: transparent;
  color: var(--accent-color);
}

#hero-section a img {
  width: 20px;
  margin-right: 7px;
}
#hero-section .hero-right-content img {
  width: 600px;
}

#hero-section .hero-right-content {
  display: flex;
  justify-content: center;
  align-items: end;
}

#hero-section .header-floating-text {
  position: absolute;
  top: 50%;
  left: -150px;
  transform: translateY(-50%) rotate(-90deg);
  font-size: 104px;
  letter-spacing: 20px;
  font-weight: 800;
  color: var(--text-color);
  opacity: 0.25;
}

/* Styling for About Section */
#about-section {
  padding: 100px 0;
}
#about-section .container {
  padding: 60px;
  border-radius: 14px;
  background-color: var(--bg-color);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
#about-section p {
  width: 80%;
  padding: 20px 0;
  text-align: center;
}
#about-section ul {
  display: flex;
  list-style: none;
  justify-content: center;
  margin-top: 20px;
  align-items: center;
  gap: 40px;
}
#about-section ul h3 {
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  color: var(--text-color);
}
#about-section ul p {
  font-size: 16px;
  padding: 5px 0 0 0;
  font-weight: 500;
  width: 100%;
  color: var(--dark-color);
}

